# algorithms

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  README.org  todo.org
Searching/: CMakeLists.txt  main.cpp
Sorting/: CMakeLists.txt  main.cpp
Tests/: CMakeLists.txt
app/src/: main.cpp
docs/: .#complexity.org  ci.org  complexity.org  links.org  todo.org
sample/: CMakeLists.txt
search/: CMakeLists.txt
sort/: CMakeLists.txt
sort/include/: sortingmagic.h
sort/src/: sortingmagic.cpp
sort/test/src/: main.cpp  sort_test.cpp
